# ComfyUI-NAFNet_plus

./: .gitignore  LICENSE  README.md  dncnn_arch.py  download_models.py  ffdnet_arch.py  mirnetv2_arch.py  nafnet_arch.py  nodes.py  pyproject.toml  requirements.txt
models/: .gitkeep  NAFNet-GoPro-width32.pth  NAFNet-GoPro-width64.pth  NAFNet-REDS-width64.pth  NAFNet-SIDD-width32.pth  NAFNet-SIDD-width64.pth  NAFSSR-L_2x.pth  NAFSSR-L_4x.pth  restormer_real_denoising.pth  scunet_color_real_psnr.pth
workflows/: nafnet_deblur.json  nafnet_denoise.json  nafnet_loader_restore.json  nafnet_tiled_restore.json  nafssr_stereo_sr.json  restormer_denoise.json  scunet_denoise.json
