[project]
name = "comfyui-nafnet"
version = "1.0.0"
description = "ComfyUI custom nodes for NAFNet image restoration (denoising, deblurring, stereo SR)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ComfyUI-NAFNet Contributors"}
]
keywords = ["comfyui", "nafnet", "image-restoration", "denoising", "deblurring", "super-resolution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy",
    "gdown",
]

[project.urls]
Homepage = "https://github.com/marduk191/ComfyUI-NAFNet"
Repository = "https://github.com/marduk191/ComfyUI-NAFNet"
Issues = "https://github.com/marduk191/ComfyUI-NAFNet/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]
ignore = ["E501"]
